# text2mapviewer

./: CHANGELOG.md  LICENCE.txt  LICENSE  MANIFEST.in  README.md  REAMDE.md  main.py  pyproject.toml  requirements.txt  setup.py
fondamental/: bases.py
scr/text2mapviewer/: main.py
scr/text2mapviewer/examples/: map_embedding.py  map_embedding_click.py
